# Online-shop-simulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.test  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pageCart.cpp  pageCheckout.cpp  pageLogin.cpp  pageMain.cpp  pageSignUp.cpp  products.json  shop_project.pro  ui_mainwindow.h
Abstracts/: Buyable.cpp  Buyable.h  BuyableScrollArea.cpp  BuyableScrollArea.h  MoneyPossesive.cpp  MoneyPossesive.h  Serializable.h
Assets/: customers.json  products.json  services.json
Classes/: BuyableScrollAreaCart.cpp  BuyableScrollAreaCart.h  BuyableScrollAreaCheckout.cpp  BuyableScrollAreaCheckout.h  BuyableScrollAreaMain.cpp  BuyableScrollAreaMain.h  Cart.cpp  Cart.h  CartItem.cpp  CartItem.h  Clothing.cpp  Clothing.h  Customer.cpp  Customer.h  ItemScrollAreaCart.cpp  ItemScrollAreaCart.h  ItemScrollAreaCheckout.cpp  ItemScrollAreaCheckout.h  ItemScrollAreaMain.cpp  Order.cpp  Order.h  Price.cpp  Price.h  Product.cpp  Product.h  Service.cpp  Service.h  StoreSystem.cpp  StoreSystem.h  Wallet.cpp  Wallet.h
Classes/Core/: Currency.cpp  Price.cpp  Product.cpp  Service.cpp
Classes/CustomWidgets/: BuyableScrollAreaMain.cpp  ProductScrollArea.cpp  ProductScrollAreaBuyable.cpp
Classes/Domain/: Cart.cpp  Clothing.cpp  Customer.cpp  Order.cpp  Wallet.cpp
Classes/Interfaces/: Buyable.cpp  MoneyPossesive.cpp
Classes/System/: StoreSystem.cpp
Enums/: BuyableDisplayedType.h  BuyableSortedBy.h  Color.h  ServiceType.h
ExternalLibs/googletest/.github/ISSUE_TEMPLATE/: 00-bug_report.yml
ExternalLibs/googletest/googlemock/: CMakeLists.txt
ExternalLibs/googletest/googletest/cmake/: internal_utils.cmake
Headers/Core/: Currency.h  Price.h  Product.h  Service.h
Headers/CustomWidgets/: BuyableScrollAreaMain.h  ProductScrollArea.h  ProductScrollAreaBuyable.h
Headers/Domain/: Cart.h  Clothing.h  Customer.h  Order.h  Wallet.h
Headers/Interfaces/: Buyable.h  MoneyPossesive.h
Headers/System/: StoreSystem.h
Interfaces/: Buyable.cpp  Buyable.h  BuyableScrollArea.cpp  BuyableScrollArea.h  DynamicWidget.h  MoneyPossesive.cpp  MoneyPossesive.h  Serializable.h
Pages/: pageCart.cpp  pageCheckout.cpp  pageLogin.cpp  pageMain.cpp  pageSignUp.cpp
Templates/: Listing.h  LoaderSaver.h
Tests/: GigaTest.cpp  testLoader.cpp  testLoader.h  testLoaderSaver.cpp  testLoaderSaver.h  testMain.cpp  testTest.cpp  testTest.h  testWallet.cpp  testWallet.h  testfiles.cpp  testfiles.h  testproducts.json  tests.pro
Tests/TestJsons/: clothingTest.json  customerTest.json  priceTest.json  productTest.json  serviceTest.json
project/: icon_resource.rc  main.cpp  mainwindow.h  mainwindow.ui  project.pro  resources.qrc
project/Abstracts/: Buyable.cpp  Buyable.h  MoneyPossesive.cpp  MoneyPossesive.h
project/Assets/: customers.json  products.json  services.json
project/Classes/: AddressLineEdit.h  Cart.cpp  Clothing.cpp  Clothing.h  Customer.cpp  Customer.h  ItemScrollAreaCart.cpp  ItemScrollAreaCheckout.cpp  ItemScrollAreaMain.cpp  ItemScrollAreaMain.h  Price.cpp  Product.cpp  Product.h  Service.cpp  Service.h  StoreSystem.cpp  StoreSystem.h  Wallet.cpp
project/Enums/: BuyableDisplayedType.h  BuyableSortedBy.h  Color.h  ServiceType.h
project/Pages/: pageCart.cpp  pageCheckout.cpp  pageLogin.cpp  pageMain.cpp  pageSignUp.cpp
project/Templates/: ItemScrollArea.h  LoaderSaver.h
